[package]
name = "catbus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local ket path deps (swap to git deps later).
ket-cas = { path = "../ket/ket-cas" }
ket-dag = { path = "../ket/ket-dag" }
ket-sql = { path = "../ket/ket-sql" }
