[package]
name = "catbus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

# Remote ket repo deps.
ket-cas = { git = "https://github.com/nickjoven/ket", package = "ket-cas" }
ket-dag = { git = "https://github.com/nickjoven/ket", package = "ket-dag" }
ket-sql = { git = "https://github.com/nickjoven/ket", package = "ket-sql" }
ket-cdom = { git = "https://github.com/nickjoven/ket", package = "ket-cdom" }

[dev-dependencies]
tempfile = "3"
